add completed index.html

--- a/index.html
+++ b/index.html
@@ -14,14 +14,23 @@
       <input id="age" type="number">
       <button type="submit">Submit!</button>
     </form>
-  </div>
 
-  
+    <div id="voter" class="hidden">
+      <h2 id= "candidates"></h2>
+      <h2>Candidates</h2>
 
+      <h3>Batman</h3>
+      <button type="submit">Submit</button>
 
+      <h3>Riddler</h3>
+      <button type="submit">Submit</button>
+    </div>
 
+    <div id="under-21" class="hidden">
+      <h2>Sorry, we can't serve you.</h2>
 
-
-
+      <p>You're stuck with who ever the grown-ups for! wah-wah</p>
+    </div>
+  </div>  
 </body>
 </html>
