Add branch code and bugfix greater than equal sign

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       <h2>Candidates</h2>
 
       <h3>Batman</h3>
-      <button type="submit">Submit</button>
+      <button type="submitb">Submit</button>
 
       <h3>Riddler</h3>
       <button type="submit">Submit</button>
     </div>
 
     <div id="under-21" class="hidden">
-      <h2>Sorry, we can't serve you.</h2>
+      <h2 id= "notlegal">No voting for you!</h2>
 
-      <p>You're stuck with who ever the grown-ups for! wah-wah</p>
+      <p>You're stuck with who ever the grown-ups elect! wah-wah</p>
     </div>
   </div>  
 </body>
